feat : 게임 끝 이후 우승자 추출 기능